--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
 
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white" id="navbarDropdownMenuLink3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img th:src="@{/pngs/user.png}" style="max-width: 48px; max-height: 48px;">Utenza
+                        <img style="max-width: 48px; max-height: 48px;">Utenza
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
                         <a class="dropdown-item" th:href="@{/login}">Login</a>
