--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIWMovie -Artista</title>
-    <link rel="stylesheet" th:href="@{/css/stile.css}">
-</head>
-
-<body class="background">
-
-    <div th:insert="~{index.html :: header}"> </div>
-
-    <main class="column" style="margin-top: 2%;">
-
-        <div class="movie-banner">
-            <div id="artist-image" class="column" style="height:100%; width:40%;">
-                <img th:src="@{'data:image;base64,' + ${artist.imageString}}"
-                    style="height: 300px; width: 220px;margin: 10px 10px 10px 30px;">
-            </div>
-            <div id="artist-info" style="height:100%; width:60%;">
-                <div>
-                    <h2 th:text="'Nome: '+${artist.name}"></h2>
-                </div>
-                <hr>
-                <div>
-                    <h2 th:text="'Cognome: '+${artist.surname}"></h2>
-                </div>
-                <hr>
-                <div>
-                    <h2 th:text=" 'Data di nascita: ' + ${artist.birthDate}">età</h2>
-                </div>
-                <hr>
-                <div th:if="${artist.deathDate}">
-                    <h2 th:text=" 'Data di morte: ' + ${artist.deathDate}">età</h2>
-                </div>
-            </div>
-        </div>
-
-        <div class="movie-reviews-banner" style="height: fit-content;">
-            <h2>Compare In:</h2>
-            <div class="card-container margin-top">
-                <div class="card" th:each="movie:${artist.movies}">
-                    <div class="card-img">
-                        <img th:src="@{'data:image;base64,' + ${movie.imageString}}">
-                    </div>
-                    <div class="card-info">
-                        <a th:href="@{'/movies' + '/' + ${movie.id} }" class="link">
-                            <h3 th:text="${movie.title} + ' ' + '(' + ${movie.year} + ')'">Info</h3>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-
-</body>
+	<head>
+	    <meta charset="UTF-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <title>SIWMovie - Artista</title>
+	    <!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	</head>
+	
+	<body>
+	
+	    <nav th:insert="~{index.html :: navbar}"> </nav>
+	
+	    <main class="container mt-3">
+		    <div class="row">
+		        <div class="col-md-4">
+		            <img th:src="@{'data:image;base64,' + ${artist.imageString}}" class="img-fluid rounded" alt="Artist image">
+		        </div>
+		        <div class="col-md-8">
+		            <h2 class="my-3">Nome: <span th:text="${artist.name}"></span></h2>
+		            <hr>
+		            <h2 class="my-3">Cognome: <span th:text="${artist.surname}"></span></h2>
+		            <hr>
+		            <h2 class="my-3">Data di nascita: <span th:text="${artist.birthDate}"></span></h2>
+		            <hr>
+		            <div th:if="${artist.deathDate}">
+		                <h2 class="my-3">Data di morte: <span th:text="${artist.deathDate}"></span></h2>
+		            </div>
+		        </div>
+		    </div>
+		
+		    <div class="mt-5">
+		        <h2>Compare In:</h2>
+		        <div class="row mt-3">
+		            <div class="col-sm-4" th:each="movie:${artist.movies}">
+		                <div class="card">
+		                    <img th:src="@{'data:image;base64,' + ${movie.imageString}}" class="card-img-top" alt="Movie image">
+		                    <div class="card-body">
+		                        <a th:href="@{'/movies' + '/' + ${movie.id} }" class="btn btn-primary">
+		                            <h3 class="card-title" th:text="${movie.title} + ' ' + '(' + ${movie.year} + ')'">Info</h3>
+		                        </a>
+		                    </div>
+		                </div>
+		            </div>
+		        </div>
+		    </div>
+		</main>
+		<!-- Optional JavaScript -->
+	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	
+	
+	</body>
 
 </html>
