--- a/src/main/resources/templates/admin/manageActors.html
+++ b/src/main/resources/templates/admin/manageActors.html
@@ -5,49 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIWMovie -Film</title>
-    <link rel="stylesheet" th:href="@{/css/stile.css}">
+    <title>SIWMovie - Gestisci Attori Di Un Film</title>
+    <!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
-<body class="background">
+<body>
 
-    <div th:insert="~{admin/adminindex.html :: header}"> </div>
+    <nav th:insert="~{admin/adminindex.html :: navbar}"> </nav>
 
     <main>
-		<div th:if="!${artists.isEmpty()} or !${movie.artists.isEmpty()}" class="evenly-spacer margin-top">
-			
-		<div class="column"> 
-			<h1 th:text="'Attori Selezionati per '+${movie.title}">Attori Selezionati Film</h1>
-			<div class="artist-box" th:each="artist: ${movie.artists}">
-				<a class="link" th:href="@{'/admin/removeActor'+ '/' + ${artist.id} + '/' + ${movie.id}}">
-				   <h3 th:text="${artist.name} + ' ' + ${artist.surname}" >Nome Cognome</h3>
-                </a>
-                <img th:src="@{'data:image;base64,' + ${artist.imageString}}">
-			</div>
-		</div>
-		
-		<div class="column">
-			<h1 th:text="'Attori Disponibili per '+${movie.title}">Attori Disponibili Film</h1>
-			<div class="artist-box" th:each="artist: ${artists}">
-				<a class="link" th:href="@{'/admin/addActor'+ '/' + ${artist.id} + '/' + ${movie.id}}">
-				   <h3 th:text="${artist.name} + ' ' + ${artist.surname}" >Nome Cognome</h3>
-                </a>
-				<img th:src="@{'data:image;base64,' + ${artist.imageString}}">
-			</div>
-		</div>
-		
-		</div>
-
-		<div th:if="${artists.isEmpty()} and ${movie.artists.isEmpty()}" style="display: flex; justify-content: center; margin-top:2%;">
-			<h1>Non ci sono ancora Attori nel sistema, Aggiungili!</h1>
-		</div>
-		
-		<div style="display: flex; justify-content: center; margin-top: 5%;">
-			<a th:href="@{'/admin/manageMovies' + '/' + ${movie.id}}" >
-		       <button class="submit" style="background-color: #1f2a8a;">Conferma</button>
-		    </a>
-		</div>
+	    <div th:if="!${artists.isEmpty()} or !${movie.artists.isEmpty()}" class="evenly-spaced margin-top">
+	        <div class="column">
+	            <h1 th:text="'Attori Selezionati per ' + ${movie.title}">Attori Selezionati Film</h1>
+	            <div class="artist-box" th:each="artist: ${movie.artists}">
+	                <a class="link" th:href="@{'/admin/removeActor/' + ${artist.id} + '/' + ${movie.id}}">
+	                    <h3 th:text="${artist.name} + ' ' + ${artist.surname}">Nome Cognome</h3>
+	                </a>
+	                <img class="img-fluid" th:src="@{'data:image;base64,' + ${artist.imageString}}">
+	            </div>
+	        </div>
+	
+	        <div class="column">
+	            <h1 th:text="'Attori Disponibili per ' + ${movie.title}">Attori Disponibili Film</h1>
+	            <div class="artist-box" th:each="artist: ${artists}">
+	                <a class="link" th:href="@{'/admin/addActor/' + ${artist.id} + '/' + ${movie.id}}">
+	                    <h3 th:text="${artist.name} + ' ' + ${artist.surname}">Nome Cognome</h3>
+	                </a>
+	                <img class="img-fluid" th:src="@{'data:image;base64,' + ${artist.imageString}}">
+	            </div>
+	        </div>
+	    </div>
+	
+	    <div th:if="${artists.isEmpty()} and ${movie.artists.isEmpty()}" class="d-flex justify-content-center margin-top">
+	        <h1>Non ci sono ancora Attori nel sistema, Aggiungili!</h1>
+	    </div>
+	
+	    <div class="d-flex justify-content-center margin-top">
+	        <a th:href="@{'/admin/manageMovies/' + ${movie.id}}">
+	            <button class="btn btn-primary">Conferma</button>
+	        </a>
+	    </div>
 	</main>
+
+	<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 </html>
