--- a/src/main/resources/templates/admin/manageMovies.html
+++ b/src/main/resources/templates/admin/manageMovies.html
@@ -5,48 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIWMovie -Tutti i Film</title>
-    <link rel="stylesheet" th:href="@{/css/stile.css}">
+    <title>SIWMovie - Gestisci Tutti I Film</title>
+    <!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
-<body class="background">
+<body>
 
-    <div th:insert="~{index.html :: header}"> </div>
+    <nav th:insert="~{index.html :: navbar}"> </nav>
 
     <main>
-        <div class="title-div">
-            <h1 class="title" th:if="${movies.isEmpty()}">Non ci sono Film nel sistema</h1>
-            <h1 class="title" th:unless="${movies.isEmpty()}">Gestisci i Film</h1>
-        </div>
+	    <div class="title-div">
+	        <h1 class="title" th:if="${movies.isEmpty()}">Non ci sono Film nel sistema</h1>
+	        <h1 class="title" th:unless="${movies.isEmpty()}">Gestisci i Film</h1>
+	    </div>
+	
+	    <div class="d-flex justify-content-center">
+	        <form method="GET" th:action="@{/manageMoviesByYear}" class="d-flex align-items-center">
+	            <h3>Filtra per anno</h3>
+	            <div class="input-content">
+	                <input type="number" placeholder="Anno del Film" class="form-control" name="year" style="height: 30px;">
+	            </div>
+	            <button type="submit" class="btn btn-primary">
+	                <img th:src="@{/svgs/search.svg}" class="icon-button">
+	            </button>
+	        </form>
+	    </div>
+	
+	    <div class="card-slideshow mini-margin-top">
+	        <div class="card-container small-margin-top">
+	            <div class="card" th:each="movie:${movies}">
+	                <div class="card-img">
+	                    <img th:src="@{'data:image;base64,' + ${movie.imageString}}" class="card-img-top">
+	                </div>
+	                <div class="card-info">
+	                    <a th:href="@{'/admin/manageMovies' + '/' + ${movie.id}}" class="link">
+	                        <h3 th:text="${movie.title} + ' (' + ${movie.year} + ')'"> Info </h3>
+	                    </a>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
+	</main>
 
-        <div style="display: flex; justify-content: space-evenly;">
-            <form method="GET" th:action="@{/manageMoviesByYear}"
-                style="display: flex; align-items: center; width:400px;">
-                <h3>Filtra per anno</h3>
-                <div class="input-content">
-                    <input type="number" placeholder="Anno del Film" class="form-input" th:name="year"
-                        style="height: 30px;">
-                </div>
-                <br>
-                <input type="image" th:src="@{/svgs/search.svg}" class="form-button">
-            </form>
-        </div>
-
-        <div class="card-slideshow mini-margin-top">
-            <div class="card-container small-margin-top">
-                <div class="card" th:each="movie:${movies}">
-                    <div class="card-img">
-                        <img th:src="@{'data:image;base64,' + ${movie.imageString}}">
-                    </div>
-                    <div class="card-info">
-                        <a th:href="@{'/admin/manageMovies' + '/' + ${movie.id}}" class="link">
-                            <h3 th:text="${movie.title} + ' ' + '(' + ${movie.year} + ')'"> Info </h3>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
