--- a/src/main/resources/templates/admin/manageReview.html
+++ b/src/main/resources/templates/admin/manageReview.html
@@ -5,39 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIWMovie -Recensione Film</title>
-    <link rel="stylesheet" th:href="@{/css/stile.css}">
+    <title>SIWMovie - Gestisci Recensione Di Un Film</title>
+    <!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
-<body class="background">
+<body>
 
-    <div th:insert="~{index.html :: header}"> </div>
+    <nav th:insert="~{index.html :: navbar}"> </nav>
 
     <main class="column" style="margin-top: 2%;">
 
-        <div th:insert="~{admin/manageMovie.html :: movie-banner}" style="width:100%;" class="column"></div>
-        <div class="movie-reviews-banner">
-                <div style="display: flex; align-items: center;">
+	    <div th:insert="~{admin/manageMovie.html :: movie-banner}" style="width:100%;" class="column"></div>
+	    
+	    <div class="movie-reviews-banner">
+	        <div class="d-flex align-items-center">
+	
+	            <h2 th:text="'Titolo: ' + ${review.title} + ' di ' + ${review.user.name} + ' ' + ${review.user.surname}+' ○ Valutazione: '+ ${review.valutation} +'/5'"></h2>
+	            <progress max="5" th:value="${review.valutation}" class="valutation-bar"></progress>
+	
+	            <div class="d-flex justify-content-end align-items-center" style="width: 55%;">
+	                <h2>Rimuovi Recensione</h2>
+	                <a th:href="@{'/admin/deleteReview/'+${review.id}}">
+	                    <img th:src="@{/svgs/bin.svg}" style="width: 40px; height: 40px; margin-left: 20%;">
+	                </a>
+	            </div>
+	
+	        </div>
+	
+	        <hr>
+	        <div style="overflow-y:scroll">
+	            <h2 th:text="${review.content}"></h2>
+	        </div>
+	    </div>
+	
+	</main>
 
-                    <h2 th:text="'Titolo: ' + ${review.title} + ' di ' + ${review.user.name} + ' ' + ${review.user.surname}+' ○ Valutazione: '+ ${review.valutation} +'/5'"></h2>
-                    <progress max="5" th:value="${review.valutation}" class="valutation-bar"></progress>
-
-                    <div style="display: flex; justify-content: flex-end; width: 55%; align-items: center;">
-                        <h2>Rimuovi Recensione</h2>
-                        <a th:href="@{'/admin/deleteReview/'+${review.id}}">
-                            <img th:src="@{/svgs/bin.svg}" style="width: 40px; height: 40px; margin-left: 20%;">
-                        </a>
-                    </div>
-
-                </div>
-
-                <hr>
-                <div style="overflow-y:scroll">
-                    <h2 th:text="${review.content}"></h2>
-                </div>
-        </div>
-
-    </main>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
