--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -6,62 +6,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIWMovie</title>
-    <link rel="stylesheet" th:href="@{/css/stile.css}">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
 
-<body class="background">
+<body>
 
-    <header th:fragment="header">
-        <a th:href="@{/index}" class="title">SIW Movie</a>
-        <nav>
-            <div class="dropdown">
-                <p>Film</p>
-                <div class="dropdown-content">
-                    <a th:href="@{/admin/formNewMovie}">Nuovo Film</a>
-                    <a th:href="@{/movies}">Tutti i Film</a>
-                </div>
-            </div>
-
-            <div class="dropdown">
-                <p>Artisti</p>
-                <div class="dropdown-content">
-                    <a th:href="@{/admin/formNewArtist}">Nuovo Artista</a>
-                    <a th:href="@{/artists}">Tutti gli Artisti</a>
-                </div>
-            </div>
-
-            <div class="dropdown">
-                <p>Gestione</p>
-                <div class="dropdown-content">
-                    <a th:href="@{/admin/manageMovies}">Gestisci Film</a>
-                    <a th:href="@{/admin/manageArtists}">Gestisci Artisti</a>
-                </div>
-            </div>
-
-            <div style="display: flex; align-items: center; margin-left: 100px;">
-                <img th:src="@{/pngs/user.png}" style="max-width: 48px; max-height: 48px;">
-
-                <div class="dropdown">
-                    <p sec:authentication="name">nomeUtente:</p>
-                    <div class="dropdown-content">
-                        <a th:href="@{/login}">Login</a>
-                        <a th:href="@{/logout}">LogOut</a>
-                        <a th:href="@{/formNewUser}">Nuovo Utente</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <main class="evenly-spacer margin-top">
-        <!--<div class="box">
-            <h2 class="title">Benvenuto!</h2>
-            <h3 class="description">In SIWMovie potrai visualizzare e gestire una raccolta di film e Artisti, e scoprire
-                le ultime news dal mondo del cinema!</h3>
-        </div>-->
-
-
-    </main>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary" th:fragment="navbar">
+	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	            <span class="navbar-toggler-icon"></span>
+	        </button>
+	        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	            <div class="navbar-nav mr-auto">
+	                <a class="nav-item nav-link text-white" th:href="@{/index}">SIW Movie</a>
+	                <div class="nav-item dropdown">
+	                    <a class="nav-link dropdown-toggle text-white" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	                        Film
+	                    </a>
+	                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+	                        <a class="dropdown-item" th:href="@{/movies}">Tutti i Film</a>
+	                        <a class="dropdown-item" th:href="@{/admin/formNewMovie}">Inserisci Film</a>
+	                    </div>
+	                </div>
+	
+	                <div class="nav-item dropdown">
+	                    <a class="nav-link dropdown-toggle text-white" id="navbarDropdownMenuLink2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	                        Artisti
+	                    </a>
+	                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
+	                        <a class="dropdown-item" th:href="@{/artists}">Tutti gli Artisti</a>
+	                        <a class="dropdown-item" th:href="@{/admin/formNewArtist}">Inserisci Artista</a>
+	                    </div>
+	                </div>
+	                
+	                 <div class="nav-item dropdown">
+	                    <a class="nav-link dropdown-toggle text-white" id="navbarDropdownMenuLink3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	                        Gestione Dati
+	                    </a>
+	                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
+	                        <a class="dropdown-item" th:href="@{/admin/manageMovies}">Gestione Film</a>
+	                        <a class="dropdown-item" th:href="@{/admin/manageArtists}">Gestione Artisti</a>
+	                    </div>
+	                </div>
+	
+	                <div class="nav-item dropdown">
+	                    <a class="nav-link dropdown-toggle text-white" id="navbarDropdownMenuLink4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	                        <img style="max-width: 48px; max-height: 48px;">Utenza
+	                    </a>
+	                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink4">
+	                        <a class="dropdown-item" th:href="@{/login}">Login</a>
+	                        <a class="dropdown-item" th:href="@{/logout}">LogOut</a>
+	                        <a class="dropdown-item" th:href="@{/formNewUser}">Nuovo Utente</a>
+	               		</div>
+	                </div>
+	            </div>
+	        </div>
+	    </nav>
+	
+	    <!-- Optional JavaScript -->
+	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	
 </body>
 
 </html>
