--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -23,35 +23,38 @@
             <h1 class="display-4" th:unless="${movies.isEmpty()}">Tutti i Film</h1>
         </div>
 
-        <div class="d-flex justify-content-around my-5">
-            <form method="GET" th:action="@{/searchMoviesByYear}" class="d-flex align-items-center">
-                <h3 class="mr-3">Filtra per anno</h3>
+        <div class="d-flex justify-content-center my-3">
+            <form method="GET" th:action="@{/searchMoviesByYear}" class="d-flex justify-content-center">
+                <h3 class="mr-3">Filtra per anno:</h3>
                 <div class="form-group">
                     <input type="number" placeholder="Anno del Film" class="form-control" th:name="year">
                 </div>
-                <button type="submit" class="btn btn-primary ml-3">
-                    <img th:src="@{/svgs/search.svg}">
+                <button type="submit" class="btn btn-primary ml-3" style="max-width: 40px; max-height: 40px;">
+                    <img style="max-width: 30px; max-height: 30px; padding-right: 15px;" th:src="@{/svgs/search.svg}">
                 </button>
             </form>
         </div>
 
-        <div class="card-deck">
-            <div th:each="movie:${movies}" class="card mb-4">
-                <img class="card-img-top" th:src="@{'data:image;base64,' + ${movie.imageString}}" alt="Image of the movie">
-                <div class="card-body">
-                    <a th:href="@{'/movies' + '/' + ${movie.id} }">
-                        <h3 class="card-title" th:text="${movie.title} + ' ' + '(' + ${movie.year} + ')'"></h3>
-                    </a>
-                </div>
-            </div>
-        </div>
+	<div class="row">
+	  <div th:each="movie:${movies}" class="col-md-4 my-2">
+	    <div class="card h-100 d-flex align-items-center">
+	      <img class="card-img-top" style="max-width: 200px; max-height: 300px; padding-top: 20px;" th:src="@{'data:image;base64,' + ${movie.imageString}}" alt="Image of the movie">
+	      <div class="card-body d-flex align-items-end">
+	        <a th:href="@{'/movies' + '/' + ${movie.id} }">
+	          <h5 class="card-title text-center" th:text="${movie.title} + ' ' + '(' + ${movie.year} + ')'"></h5>
+	        </a>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
     </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+	
 
 </body>
 
