--- a/src/main/resources/templates/user/editReviews.html
+++ b/src/main/resources/templates/user/editReviews.html
@@ -6,32 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIWMovie -Il mio Profilo</title>
-    <link rel="stylesheet" th:href="@{/css/stile.css}">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
 
-<body class="background">
+<body>
 
-    <div th:insert="~{index.html :: header}"> </div>
+    <nav th:insert="~{index.html :: navbar}"> </nav>
 
-    <main class="column margin-top" style="margin-top: 2%;">
-
-        <div class="movie-reviews-banner" style="height: 500px;">
-            <h2 style="margin-left: 20px" th:text="'Nome Utente: ' + ${user.name} + ' ' + ${user.surname} + ' ○ Le mie Recensioni:'">Recensioni</h2>
-            <div style="display: flex; justify-content: flex-end;">
-            </div>
-            <div class="review-container" style="height: 400px;">
-                <div class="review-content" th:each="review: ${user.review}">
-                    <h2
-                        th:text="'Titolo: ' + ${review.title} +' ○ Valutazione: '+ ${review.valutation} +'/5'">
-                    </h2>
-                    <progress max="5" th:value="${review.valutation}" class="valutation-bar"></progress>
-                    <a th:href="@{'/user/editReview/'+${review.id}}" class="link" style="margin-left: 10%;"><h2>Modifica Recensione</h2></a>
-                </div>
-            </div>
-        </div>
-
-
-    </main>
+    <main class="container mt-3">
+	    <div class="row align-items-center" style="height: 500px;">
+	        <h2 class="ml-2" th:text="'Nome Utente: ' + ${user.name} + ' ' + ${user.surname} + ' ○ Le mie Recensioni:'">Recensioni</h2>
+	        <div class="d-flex justify-content-end">
+	        </div>
+	        <div class="review-container overflow-auto" style="height: 400px;">
+	            <div class="mb-3" th:each="review: ${user.review}">
+	                <h2 th:text="'Titolo: ' + ${review.title} +' ○ Valutazione: '+ ${review.valutation} +'/5'"></h2>
+	                <progress max="5" th:value="${review.valutation}" class="progress"></progress>
+	                <a th:href="@{'/user/editReview/'+${review.id}}" class="btn btn-link ml-2"><h2>Modifica Recensione</h2></a>
+	            </div>
+	        </div>
+	    </div>
+	</main>
+	<!-- Optional JavaScript -->
+	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	
 
 </body>
 
