--- a/src/main/resources/templates/user/formEditReview.html
+++ b/src/main/resources/templates/user/formEditReview.html
@@ -6,64 +6,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SiwMovie -Modifica Recensione Film</title>
-    <link rel="stylesheet" th:href="@{/css/stile.css}">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
 
 <body class="background">
 
-    <div th:insert="~{index.html :: header}"> </div>
+    <nav th:insert="~{index.html :: navbar}"> </nav>
 
-    <main class="column" style="margin-top: 2%;">
-        <div th:insert="~{movie.html :: movie-banner}" style="width:100%;" class="column"></div>
-
-        <form method="POST" th:action="@{/user/editReview/{id}(id=${review.id})}" th:object="${review}"
-            class="movie-reviews-banner">
-
-            <div style="display: flex; margin-top:2%" id="title-and-valutation">
-
-                <div class="column" style="margin-left: 5%;">
-                    <div style="display: flex; align-items: center;">
-                        <h2>Titolo:</h2>
-                        <input type="text" placeholder="Titolo" class="form-input" style="width: 200px"
-                            th:field="${review.title}">
-                    </div>
-                    <span class="error" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
-                </div>
-
-                <div class="column" style="margin-left: 10%;">
-                    <div style="display: flex; align-items: center;">
-                        <h2 th:text="'Numero di Stelle: '">Numero Di Stelle:</h2>
-                        <input type="radio" name="valutation" value="1" th:checked="${review.valutation == 1}">
-                        <h2>1</h2>
-                        <input type="radio" name="valutation" value="2" th:checked="${review.valutation == 2}">
-                        <h2>2</h2>
-                        <input type="radio" name="valutation" value="3" th:checked="${review.valutation == 3}">
-                        <h2>3</h2>
-                        <input type="radio" name="valutation" value="4" th:checked="${review.valutation == 4}">
-                        <h2>4</h2>
-                        <input type="radio" name="valutation" value="5" th:checked="${review.valutation == 5}">
-                        <h2>5</h2>
-                    </div>
-                    <span class="error" th:if="${#fields.hasErrors('valutation')}" th:errors="*{valutation}"></span>
-                </div>
-
-            </div>
-
-            <div style="display: flex;margin-left: 5%; margin-top: 2%; align-items:center;">
-                <div class="column" style="width: 70%">
-                    <textarea type="text" class="form-input textarea-input" th:field="${review.content}"></textarea>
-                    <span class="error" th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></span>
-                </div>
-
-                <div class="column" style="margin-left:2%;">
-                    <input type="submit" class="submit">
-                    <div th:if="${#fields.hasGlobalErrors()}">
-                        <h3 class="error" th:each="err:${#fields.globalErrors()}" th:text="${err}">Errore</h3>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </main>
+    <main class="container mt-3">
+	    <div th:insert="~{movie.html :: movie-banner}" class="d-flex w-100"></div>
+	
+	    <form method="POST" th:action="@{/user/editReview/{id}(id=${review.id})}" th:object="${review}">
+	
+	        <div class="d-flex mt-2" id="title-and-valutation">
+	
+	            <div class="d-flex flex-column ml-2">
+	                <div class="d-flex align-items-center">
+	                    <h2>Titolo:</h2>
+	                    <input type="text" placeholder="Titolo" class="form-control" style="width: 200px"
+	                        th:field="${review.title}">
+	                </div>
+	                <span class="text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
+	            </div>
+	
+	            <div class="d-flex flex-column ml-4">
+	                <div class="d-flex align-items-center">
+	                    <h2 th:text="'Numero di Stelle: '">Numero Di Stelle:</h2>
+	                    <input type="radio" name="valutation" value="1" th:checked="${review.valutation == 1}">
+	                    <h2>1</h2>
+	                    <input type="radio" name="valutation" value="2" th:checked="${review.valutation == 2}">
+	                    <h2>2</h2>
+	                    <input type="radio" name="valutation" value="3" th:checked="${review.valutation == 3}">
+	                    <h2>3</h2>
+	                    <input type="radio" name="valutation" value="4" th:checked="${review.valutation == 4}">
+	                    <h2>4</h2>
+	                    <input type="radio" name="valutation" value="5" th:checked="${review.valutation == 5}">
+	                    <h2>5</h2>
+	                </div>
+	                <span class="text-danger" th:if="${#fields.hasErrors('valutation')}" th:errors="*{valutation}"></span>
+	            </div>
+	
+	        </div>
+	
+	        <div class="d-flex align-items-center ml-2 mt-2">
+	            <div class="d-flex flex-column" style="width: 70%">
+	                <textarea type="text" class="form-control" th:field="${review.content}"></textarea>
+	                <span class="text-danger" th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></span>
+	            </div>
+	
+	            <div class="d-flex flex-column ml-2">
+	                <input type="submit" class="btn btn-primary">
+	                <div th:if="${#fields.hasGlobalErrors()}">
+	                    <h3 class="text-danger" th:each="err:${#fields.globalErrors()}" th:text="${err}">Errore</h3>
+	                </div>
+	            </div>
+	        </div>
+	    </form>
+	</main>
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	
 
 </body>
 
