Ottavo commit - aggiunto commento index

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,6 +42,7 @@
 	                    <a class="nav-link dropdown-toggle text-white" id="navbarDropdownMenuLink3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	                        <img style="max-width: 48px; max-height: 48px;">Utenza
 	                    </a>
+	                    <!--DA MODIFICARE-->
 	                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
 	                        <a class="dropdown-item" th:href="@{/login}">Login</a>
 	                        <a class="dropdown-item" th:href="@{/logout}">LogOut</a>
