Nono Commit - Adattamento stile html

--- a/src/main/resources/templates/admin/addDirector.html
+++ b/src/main/resources/templates/admin/addDirector.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <nav th:insert="~{admin/adminindex.html :: navbar}"> </nav>t
+    <nav th:insert="~{navbar.html :: navbar-admin}"> </nav>
 
     <main class="column">
 
