--- a/src/main/resources/templates/admin/manageArtists.html
+++ b/src/main/resources/templates/admin/manageArtists.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <nav th:insert="~{admin/adminindex.html :: navbar}"> </nav>
+    <nav th:insert="~{navbar.html :: navbar-admin}"> </nav>
 
     <main>
 	    <div class="card-slideshow small-margin-top">
