--- a/src/main/resources/templates/admin/formNewMovie.html
+++ b/src/main/resources/templates/admin/formNewMovie.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <nav th:insert="~{admin/adminindex.html :: navbar}"> </nav>
+    <nav th:insert="~{navbar.html :: navbar-admin}"> </nav>
 
     <main class="evenly-spaced margin-top">
 	    <form method="POST" th:action="@{/admin/movies}" th:object="${movie}" class="box" enctype="multipart/form-data">
