--- a/src/main/resources/templates/admin/manageActors.html
+++ b/src/main/resources/templates/admin/manageActors.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <nav th:insert="~{admin/adminindex.html :: navbar}"> </nav>
+    <nav th:insert="~{navbar.html :: navbar-admin}"> </nav>
 
     <main>
 	    <div th:if="!${artists.isEmpty()} or !${movie.artists.isEmpty()}" class="evenly-spaced margin-top">
