--- a/src/main/resources/templates/admin/manageArtist.html
+++ b/src/main/resources/templates/admin/manageArtist.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <nav th:insert="~{admin/adminindex.html :: navbar}"> </nav>
+    <nav th:insert="~{navbar.html :: navbar-admin}"> </nav>
 
     <main class="evenly-spaced margin-top">
 	    <div class="box">
