--- a/src/main/resources/templates/admin/manageReview.html
+++ b/src/main/resources/templates/admin/manageReview.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <nav th:insert="~{index.html :: navbar}"> </nav>
+    <nav th:insert="~{navbar.html :: navbar-admin}"> </nav>
 
     <main class="column" style="margin-top: 2%;">
 
