--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -14,33 +14,34 @@
 	
 	    <nav th:insert="~{index.html :: navbar}"> </nav>
 	
-	    <main class="container mt-3">
+	    <main class="container mt-4">
 		    <div class="row">
 		        <div class="col-md-4">
-		            <img th:src="@{'data:image;base64,' + ${artist.imageString}}" class="img-fluid rounded" alt="Artist image">
+		            <img th:src="@{'data:image;base64,' + ${artist.imageString}}" class="img-fluid rounded mx-auto d-block" alt="Artist image">
 		        </div>
 		        <div class="col-md-8">
-		            <h2 class="my-3">Nome: <span th:text="${artist.name}"></span></h2>
+		            <h3 class="my-3">Nome: <span th:text="${artist.name}"></span></h3>
 		            <hr>
-		            <h2 class="my-3">Cognome: <span th:text="${artist.surname}"></span></h2>
+		            <h3 class="my-3">Cognome: <span th:text="${artist.surname}"></span></h5>
 		            <hr>
-		            <h2 class="my-3">Data di nascita: <span th:text="${artist.birthDate}"></span></h2>
+		            <h5 class="my-3">Data di nascita: <span th:text="${artist.birthDate}"></span></h5>
 		            <hr>
 		            <div th:if="${artist.deathDate}">
-		                <h2 class="my-3">Data di morte: <span th:text="${artist.deathDate}"></span></h2>
+		                <h5 class="my-3">Data di morte: <span th:text="${artist.deathDate}"></span></h5>
 		            </div>
 		        </div>
 		    </div>
 		
 		    <div class="mt-5">
-		        <h2>Compare In:</h2>
+				<br>
+		        <h3>Compare In:</h3>
 		        <div class="row mt-3">
 		            <div class="col-sm-4" th:each="movie:${artist.movies}">
-		                <div class="card">
-		                    <img th:src="@{'data:image;base64,' + ${movie.imageString}}" class="card-img-top" alt="Movie image">
-		                    <div class="card-body">
-		                        <a th:href="@{'/movies' + '/' + ${movie.id} }" class="btn btn-primary">
-		                            <h3 class="card-title" th:text="${movie.title} + ' ' + '(' + ${movie.year} + ')'">Info</h3>
+		                <div id="card-container" class="card shadow" style="align-items: center;">
+		                    <img th:src="@{'data:image;base64,' + ${movie.imageString}}" class="card-img-top mt-3" alt="Movie image" style="max-width: 200px; max-height: 300px;">
+		                    <div class="card-body" style="text-align: center;">
+		                        <a th:href="@{'/movies' + '/' + ${movie.id} }" class="btn btn-primary" style="max-width: fit-content;">
+		                            <h5 class="card-title" th:text="${movie.title} + ' ' + '(' + ${movie.year} + ')'">Info</h5>
 		                        </a>
 		                    </div>
 		                </div>
