--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,47 +12,7 @@
 	
 	<body>
 	
-	    <nav class="navbar navbar-expand-lg navbar-light bg-primary" th:fragment="navbar">
-	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-	            <span class="navbar-toggler-icon"></span>
-	        </button>
-	        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-	            <div class="navbar-nav mr-auto">
-	                <a class="nav-item nav-link text-white" th:href="@{/index}">SIW Movie</a>
-	                <div class="nav-item dropdown">
-	                    <a class="nav-link dropdown-toggle text-white" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	                        Film
-	                    </a>
-	                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-	                        <a class="dropdown-item" th:href="@{/movies}">Tutti i Film</a>
-	                    </div>
-	                </div>
-	
-	                <div class="nav-item dropdown">
-	                    <a class="nav-link dropdown-toggle text-white" id="navbarDropdownMenuLink2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	                        Artisti
-	                    </a>
-	                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
-	                        <a class="dropdown-item" th:href="@{/artists}">Tutti gli Artisti</a>
-	                    </div>
-	                </div>
-	                
-	
-	                <div class="nav-item dropdown">
-	                    <a class="nav-link dropdown-toggle text-white" id="navbarDropdownMenuLink3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	                        <img style="max-width: 48px; max-height: 48px;">Utenza
-	                    </a>
-	                    <!--DA MODIFICARE-->
-	                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
-	                        <a class="dropdown-item" th:href="@{/login}">Login</a>
-	                        <a class="dropdown-item" th:href="@{/logout}">LogOut</a>
-	                        <a class="dropdown-item" th:href="@{/formNewUser}">Nuovo Utente</a>
-	                        <a class="dropdown-item" th:href="@{/user/editReviews}">Il mio Profilo</a>
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
-	    </nav>
+	    <nav th:insert="~{navbar.html :: navbar}"> </nav>
 	
 	    <!-- Optional JavaScript -->
 	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
