--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -20,9 +20,10 @@
     <div th:insert="~{movie.html :: movie-banner}" class="row"></div>
     <div class="movie-reviews-banner mt-4">
         <div class="d-flex align-items-center">
-            <h2 th:text="'Titolo: ' + ${review.title} + ' di ' + ${review.user.name} + ' ' + ${review.user.surname}+' ○ Valutazione: '+ ${review.valutation} +'/5'"></h2>
-            <progress max="5" th:value="${review.valutation}" class="progress"></progress>
+            <h2 th:utext="'Titolo: ' + ${review.title} +  '<br/>' + ' di ' + ${review.user.name} + ' ' + ${review.user.surname}+ '<br/>' + ' Valutazione: '+ ${review.valutation} +'/5'"></h2>
+            
         </div>
+        <progress max="5" th:value="${review.valutation}" class="progress"></progress>
         <hr>
         <div style="overflow-y:scroll">
             <h2 th:text="${review.content}"></h2>
