--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -12,7 +12,7 @@
 	
 	<body>
 	
-	    <nav th:insert="~{index.html :: navbar}"> </nav>
+	    <nav th:insert="~{navbar.html :: navbar}"> </nav>
 	
 	    <main class="container mt-4">
 		    <div class="row">
