--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -9,6 +9,12 @@
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" th:href="@{/css/stile.css}">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  	<style>
+    	.checked {
+     	 color: orange;
+    	}
+  	</style>
 </head>
 
 <body>
@@ -61,7 +67,27 @@
 	            <h2 th:text="'Titolo: ' + ${review.title}"></h2>
 	            <h5 th:text="'Autore: ' + ${review.user.name} + ' ' + ${review.user.surname}"></h5>
                 <h5 style="padding-bottom: 5px;" th:text="'Valutazione: '+ ${review.valutation} +'/5'"></h5>
-	            <progress max="5" th:value="${review.valutation}" class="progress-bar rounded shadow"></progress>
+	            <!--<progress max="5" th:value="${review.valutation}" class="progress-bar rounded shadow"></progress>-->
+	            <style>
+    					.stars-container {
+        				display: inline-block;
+    				}
+
+    				.stars-container p {
+        				display: inline-block;
+    				}
+    				
+        			
+					</style>
+
+					<div th:with="valutation=${review.valutation}">
+					    <div class="stars-container">
+					        <p th:each="review: ${#numbers.sequence(0, 5)}">
+					            <span th:if="${review > valutation}" class="fa fa-star"></span>
+					            <span th:if="${review < valutation}" class="fa fa-star checked"></span>
+					        </p>
+					    </div>
+					</div>
 		        <a th:href="@{'/review/'+${review.id}}" class="text-decoration-none"><h5 style="padding-top: 10px;">Leggi Recensione</h5></a>
             </div>
         </div>
