--- a/src/main/resources/templates/admin/addDirector.html
+++ b/src/main/resources/templates/admin/addDirector.html
@@ -23,7 +23,7 @@
 	        <h1 class="title" th:text="'Registi disponibili per ' + ${movie.title}">Titolo</h1>
 	    </div>
 	
-	    <div id="card-slideshow" class="carousel slide" data-ride="carousel">
+	    <div id="card-slideshow" class="carousel slide" data-ride="carousel" style="max-width: 300px; max-height: 200px;">
 	        <div class="carousel-inner">
 	            <div class="carousel-item active" th:each="director : ${directors}">
 	                <div class="card">
