--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -8,13 +8,8 @@
     <title th:text="'SIWMovie - ' +${movie.title}"></title>
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" th:href="@{/css/stile.css}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  	<style>
-    	.checked {
-     	 color: orange;
-    	}
-  	</style>
+	<link rel="stylesheet" th:href="@{/css/stile.css}">
 </head>
 
 <body>
@@ -50,11 +45,10 @@
 
     <div class="movie-reviews-banner my-5">
 		<h3>Recensioni</h3>
-        <div class="d-flex justify-content-between align-items-center mb-4">
-            <h3 th:if="${rating} != null" th:text="'Valutazione Media: '+${rating}+'/5'"></h3>
-            <progress th:if="${rating} != null" class="progress-bar rounded shadow" th:value="${rating}" max="5"></progress>
-
-        </div>
+        <div class="d-flex align-items-center mb-4">
+			<h3 th:if="${rating} != null" th:text="'Valutazione Media: '+${rating}+'/5'"></h3>
+			<!-- <progress th:if="${rating} != null" class="progress-bar rounded shadow" th:value="${rating}" max="5"></progress>-->
+		</div>
         <div class="d-flex justify-content-center" th:if="${reviews.isEmpty()}">
 			<h4>Non ci sono recensioni per quest film!</h4>
         </div>
@@ -68,23 +62,11 @@
 	            <h5 th:text="'Autore: ' + ${review.user.name} + ' ' + ${review.user.surname}"></h5>
                 <h5 style="padding-bottom: 5px;" th:text="'Valutazione: '+ ${review.valutation} +'/5'"></h5>
 	            <!--<progress max="5" th:value="${review.valutation}" class="progress-bar rounded shadow"></progress>-->
-	            <style>
-    					.stars-container {
-        				display: inline-block;
-    				}
-
-    				.stars-container p {
-        				display: inline-block;
-    				}
-    				
-        			
-					</style>
-
 					<div th:with="valutation=${review.valutation}">
 					    <div class="stars-container">
-					        <p th:each="review: ${#numbers.sequence(0, 5)}">
-					            <span th:if="${review > valutation}" class="fa fa-star"></span>
-					            <span th:if="${review < valutation}" class="fa fa-star checked"></span>
+					        <p id="stars" th:each="idStar: ${#numbers.sequence(0, 5)}">
+					            <span th:if="${idStar > valutation}" class="fa fa-star"></span>
+					            <span th:if="${idStar < valutation}" class="fa fa-star checked"></span>
 					        </p>
 					    </div>
 					</div>
@@ -99,7 +81,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
 
 </body>
 
