--- a/src/main/resources/templates/admin/manageActors.html
+++ b/src/main/resources/templates/admin/manageActors.html
@@ -18,14 +18,13 @@
 	    <div th:if="!${artists.isEmpty()} or !${movie.artists.isEmpty()}" class="evenly-spaced margin-top">
 	        <div class="column">
 	            <h1 th:text="'Attori Selezionati per ' + ${movie.title}">Attori Selezionati Film</h1>
-	            <div class="artist-box" th:each="artist: ${movie.artists}">
+	            <div class="artist-box" th:each="artist: ${movie.artists}" style="max-width: 200px; max-height: 300px;">
 	                <a class="link" th:href="@{'/admin/removeActor/' + ${artist.id} + '/' + ${movie.id}}">
 	                    <h3 th:text="${artist.name} + ' ' + ${artist.surname}">Nome Cognome</h3>
 	                </a>
 	                <img class="img-fluid" th:src="@{'data:image;base64,' + ${artist.imageString}}">
 	            </div>
 	        </div>
-	
 	        <div class="column">
 	            <h1 th:text="'Attori Disponibili per ' + ${movie.title}">Attori Disponibili Film</h1>
 	            <div class="artist-box" th:each="artist: ${artists}">
@@ -35,6 +34,8 @@
 	                <img class="img-fluid" th:src="@{'data:image;base64,' + ${artist.imageString}}">
 	            </div>
 	        </div>
+	
+	        
 	    </div>
 	
 	    <div th:if="${artists.isEmpty()} and ${movie.artists.isEmpty()}" class="d-flex justify-content-center margin-top">
