--- a/src/main/resources/templates/admin/manageReview.html
+++ b/src/main/resources/templates/admin/manageReview.html
@@ -14,29 +14,22 @@
 
     <nav th:insert="~{navbar.html :: navbar-admin}"> </nav>
 
-    <main class="column" style="margin-top: 2%;">
+    <main class="column" style="margin-top: 2%; align-items: center;">
 
-	    <div th:insert="~{admin/manageMovie.html :: movie-banner}" style="width:100%;" class="column"></div>
-	    
-	    <div class="movie-reviews-banner">
-	        <div class="d-flex align-items-center">
+		<div>
+	    	<h2 th:text="'Titolo: ' + ${review.title} + ' di ' + ${review.user.name} + ' ' + ${review.user.surname}+' | Valutazione: '+ ${review.valutation} +'/5'"></h2>
+	    </div>
+	            <!--<progress max="5" th:value="${review.valutation}" class="valutation-bar"></progress>-->
 	
-	            <h2 th:text="'Titolo: ' + ${review.title} + ' di ' + ${review.user.name} + ' ' + ${review.user.surname}+' ○ Valutazione: '+ ${review.valutation} +'/5'"></h2>
-	            <progress max="5" th:value="${review.valutation}" class="valutation-bar"></progress>
-	
-	            <div class="d-flex justify-content-end align-items-center" style="width: 55%;">
-	                <h2>Rimuovi Recensione</h2>
-	                <a th:href="@{'/admin/deleteReview/'+${review.id}}">
-	                    <img th:src="@{/svgs/bin.svg}" style="width: 40px; height: 40px; margin-left: 20%;">
-	                </a>
-	            </div>
-	
-	        </div>
-	
-	        <hr>
-	        <div style="overflow-y:scroll">
-	            <h2 th:text="${review.content}"></h2>
-	        </div>
+	    <div class="d-flex justify-content-end align-items-center" style="width: 55%;">
+	    	<h2>Rimuovi Recensione</h2>
+	        <a th:href="@{'/admin/deleteReview/'+${review.id}}">
+	        	<img th:src="@{/svgs/bin.svg}" style="width: 40px; height: 40px; margin-left: 20%;">
+	        </a>
+	    </div>
+	    <hr>
+	    <div style="overflow-y:scroll">
+	    	<h2 th:text="${review.content}"></h2>
 	    </div>
 	
 	</main>
