--- a/src/main/resources/templates/admin/manageActors.html
+++ b/src/main/resources/templates/admin/manageActors.html
@@ -15,39 +15,41 @@
     <nav th:insert="~{navbar.html :: navbar-admin}"> </nav>
 
     <main>
-	    <div th:if="!${artists.isEmpty()} or !${movie.artists.isEmpty()}" class="evenly-spaced margin-top">
-	        <div class="column">
-	            <h1 th:text="'Attori Selezionati per ' + ${movie.title}">Attori Selezionati Film</h1>
-	            <div class="artist-box" th:each="artist: ${movie.artists}" style="max-width: 200px; max-height: 300px;">
-	                <a class="link" th:href="@{'/admin/removeActor/' + ${artist.id} + '/' + ${movie.id}}">
-	                    <h3 th:text="${artist.name} + ' ' + ${artist.surname}">Nome Cognome</h3>
-	                </a>
-	                <img class="img-fluid" th:src="@{'data:image;base64,' + ${artist.imageString}}">
-	            </div>
-	        </div>
-	        <div class="column">
-	            <h1 th:text="'Attori Disponibili per ' + ${movie.title}">Attori Disponibili Film</h1>
-	            <div class="artist-box" th:each="artist: ${artists}">
-	                <a class="link" th:href="@{'/admin/addActor/' + ${artist.id} + '/' + ${movie.id}}">
-	                    <h3 th:text="${artist.name} + ' ' + ${artist.surname}">Nome Cognome</h3>
-	                </a>
-	                <img class="img-fluid" th:src="@{'data:image;base64,' + ${artist.imageString}}">
-	            </div>
-	        </div>
-	
-	        
-	    </div>
-	
-	    <div th:if="${artists.isEmpty()} and ${movie.artists.isEmpty()}" class="d-flex justify-content-center margin-top">
-	        <h1>Non ci sono ancora Attori nel sistema, Aggiungili!</h1>
-	    </div>
-	
-	    <div class="d-flex justify-content-center margin-top">
-	        <a th:href="@{'/admin/manageMovies/' + ${movie.id}}">
-	            <button class="btn btn-primary">Conferma</button>
-	        </a>
-	    </div>
-	</main>
+    <div th:if="!${artists.isEmpty()} or !${movie.artists.isEmpty()}" class="evenly-spaced margin-top">
+        <div class="row">
+            <div class="col-md-6">
+                <h1 th:text="'Attori Selezionati per ' + ${movie.title}">Attori Selezionati Film</h1>
+                <div class="artist-box bg-warning" th:each="artist: ${movie.artists}" style="max-width: 200px; max-height: 300px;">
+                    <a class="link" th:href="@{'/admin/removeActor/' + ${artist.id} + '/' + ${movie.id}}">
+                        <h3 th:text="${artist.name} + ' ' + ${artist.surname}">Nome Cognome</h3>
+                    </a>
+                    <img class="img-fluid" th:src="@{'data:image;base64,' + ${artist.imageString}}">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h1 th:text="'Attori Disponibili per ' + ${movie.title}">Attori Disponibili Film</h1>
+                <div class="artist-box bg-warning" th:each="artist: ${artists}" style="max-width: 200px; max-height: 300px;">
+                    <a class="link" th:href="@{'/admin/addActor/' + ${artist.id} + '/' + ${movie.id}}">
+                        <h3 th:text="${artist.name} + ' ' + ${artist.surname}">Nome Cognome</h3>
+                    </a>
+                    <img class="img-fluid" th:src="@{'data:image;base64,' + ${artist.imageString}}">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div th:if="${artists.isEmpty()} and ${movie.artists.isEmpty()}" class="d-flex justify-content-center margin-top">
+        <h1>Non ci sono ancora Attori nel sistema, Aggiungili!</h1>
+    </div>
+
+    <div class="d-flex justify-content-center margin-top">
+        <a th:href="@{'/admin/manageMovies/' + ${movie.id}}">
+            <button class="btn btn-primary">Conferma</button>
+        </a>
+    </div>
+</main>
+
+
 
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
