Commit Finale Progetto

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 
 	<body>
 	
-	    <nav th:insert="~{navbar.html :: navbar}"> </nav>
+	    <nav th:insert="~{navbar.html :: navbar-std}"> </nav>
 	
 	    <main class="d-flex justify-content-center align-items-center mt-4">
 	    <form action="@{/login}" method="post" class="box">
