--- a/src/main/resources/templates/artists.html
+++ b/src/main/resources/templates/artists.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <nav th:insert="~{navbar.html :: navbar}"> </nav>
+    <nav th:insert="~{navbar.html :: navbar-std}"> </nav>
 
     <main class="mt-3">
 	    <div class="container">
