--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 	
 	<body>
 	
-	    <nav th:insert="~{navbar.html :: navbar}"> </nav>
+	    <nav th:insert="~{navbar.html :: navbar-index}"> </nav>
 	
 	    <!-- Optional JavaScript -->
 	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
