--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <nav th:insert="~{navbar.html :: navbar}"> </nav>
+    <nav th:insert="~{navbar.html :: navbar-std}"> </nav>
     
 
     <main class="container mt-5">
