--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <nav th:insert="~{navbar.html :: navbar}"> </nav>
+    <nav th:insert="~{navbar.html :: navbar-std}"> </nav>
 
     <main class="container mt-4">
 
