--- a/src/main/resources/templates/user/editReviews.html
+++ b/src/main/resources/templates/user/editReviews.html
@@ -10,17 +10,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" th:href="@{/css/stile.css}">
-  	<style>
-    	.checked {
-     	 color: orange;
-    	}
-  	</style>
+
 
 </head>
 
 <body>
 
-    <nav th:insert="~{navbar.html :: navbar}"> </nav>
+    <nav th:insert="~{navbar.html :: navbar-std}"> </nav>
 
     <main class="container mt-3">
 	    <div class="column align-items-center" style="height: 500px;">
@@ -33,7 +29,7 @@
 	                <!--<progress max="5" th:value="${review.valutation}" class="progress"></progress>-->
 					<div th:with="valutation=${review.valutation}">
 					    <div class="stars-container">
-					        <p th:each="review: ${#numbers.sequence(0, 5)}">
+					        <p id="stars" th:each="review: ${#numbers.sequence(0, 5)}">
 					            <span th:if="${review > valutation}" class="fa fa-star"></span>
 					            <span th:if="${review < valutation}" class="fa fa-star checked"></span>
 					        </p>
